[package]
name = "rest-rs"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["macros", "stream", "dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1.29"
http = "0.2"
parking_lot = "0.10.2"
openapiv3 = "0.3.0"
indexmap = "1.3.2"
fnv = "1.0.3"
route-recognizer = "0.1.13"
h2 = { git = "https://github.com/polc/h2" }
env_logger = "0.7.1"