[package]
name = "rest-rs"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
futures = "0.3.8"
async-trait = "0.1.42"
http = "0.2.2"
route-recognizer = "0.3.0"
nom = "6.0.1"
