[package]
name = "rest-rs"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
hyper = "0.13"
h2 = "0.2.7"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.7"
async-trait = "0.1.29"
http = "0.2"
route-recognizer = "0.1.13"
nom = "6.0.0"
